# process-messages

./: Cargo.toml  LICENSE  README.md  docker-compose-no-cluster.yaml  docker-compose-no-clusters.yaml  docker-compose.yaml
processor/: Cargo.toml
processor/src/: cli.rs
processor_svc/: Cargo.toml  Dockerfile
processor_svc/src/: main.rs
queue_worker/: Cargo.toml
queue_worker/src/: cli.rs  main.rs
queue_worker_svc/: Cargo.toml  Dockerfile
queue_worker_svc/src/: main.rs
shared/command/: Cargo.toml
shared/command/src/: lib.rs
shared/instrumentation/: Cargo.toml
shared/instrumentation/src/: lib.rs  logger.rs
web_app/: Cargo.toml  Dockerfile
web_app/src/: cli.rs  error.rs  main.rs  route.rs  state.rs  trace_layer.rs
