[package]
name = "nats-processor-service"
version = "0.1.0"
edition = "2021"

[dependencies]
instrumentation = { path = "../shared/instrumentation/" }

# nats
async-nats = "0.33.0"
# features of futures
futures = "0.3.29"
# async runtime
tokio = { version = "1.34.0", features = ["full"] }
# adjust cli
clap = { version = "4.4.8", features = ["env", "derive"] }
# colorful output and anyhow like error wrapper
color-eyre = "0.6.2" 
# enable tracing
tracing = "0.1.40"
# url
url = "2.5.0"
