[package]
name = "nats-queue-worker-service"
version = "0.1.0"
edition = "2021"

[dependencies]
command = { path = "../shared/command/" }
instrumentation = { path = "../shared/instrumentation/" }

# uuid
uuid = { version = "1.6.1", features = ["fast-rng", "v4"] }
# nats
async-nats = "0.33.0"
# features of futures
futures = "0.3.29"
# json se/de
serde_json = "1.0.108"
# async runtime
tokio = { version = "1.34.0", features = ["full"] }
# adjust cli
clap = { version = "4.4.8", features = ["env", "derive"] }
# colorful output and anyhow like error wrapper
color-eyre = "0.6.2" 
# enable tracing
tracing = "0.1.40"
# url
url = "2.5.0"
